<resources>
    <string name="app_name">Currency converter</string>
    <string name="name_btn">SUBMIT</string>
    <string name="name_balances">MY BALANCES</string>
    <string name="currency_ex">CURRENCY EXCHANGE</string>
    <string name="title_sell">Sell</string>
    <string name="title_receive">Receive</string>

    <string-array name="currency_codes">
        <item>"EUR"</item>
        <item>"ACD"</item>
        <item>"AFN"</item>
        <item>"ALL"</item>
        <item>"AMD"</item>
        <item>"ANG"</item>
        <item>"AOA"</item>
        <item>"ARS"</item>
        <item>"AUD"</item>
        <item>"AWG"</item>
        <item>"AZN"</item>
        <item>"BAM"</item>
        <item>"BBD"</item>
        <item>"BDT"</item>
        <item>"BGN"</item>
        <item>"BHD"</item>
        <item>"BIF"</item>
        <item>"BMD"</item>
        <item>"BND"</item>
        <item>"BOB"</item>
        <item>"BRL"</item>
        <item>"BSD"</item>
        <item>"BTC"</item>
        <item>"BTN"</item>
        <item>"BWP"</item>
        <item>"BYN"</item>
        <item>"BYR"</item>
        <item>"BZD"</item>
        <item>"CAD"</item>
        <item>"CDF"</item>
        <item>"CHF"</item>
        <item>"CLF"</item>
        <item>"CLP"</item>
        <item>"CNY"</item>
        <item>"COP"</item>
        <item>"CRC"</item>
        <item>"CUC"</item>
        <item>"CUP"</item>
        <item>"CVE"</item>
        <item>"CZK"</item>
        <item>"DJF"</item>
        <item>"DKK"</item>
        <item>"DZD"</item>
        <item>"EGP"</item>
        <item>"ERN"</item>
        <item>"ETB"</item>
        <item>"FJD"</item>
        <item>"FKP"</item>
        <item>"GBP"</item>
        <item>"GEL"</item>
        <item>"GGP"</item>
        <item>"GHS"</item>
        <item>"GIP"</item>
        <item>"GMD"</item>
        <item>"GNF"</item>
        <item>"GTQ"</item>
        <item>"GYD"</item>
        <item>"HKD"</item>
        <item>"HNL"</item>
        <item>"HRK"</item>
        <item>"HTG"</item>
        <item>"HUF"</item>
        <item>"IDR"</item>
        <item>"ILS"</item>
        <item>"IMP"</item>
        <item>"INR"</item>
        <item>"IQD"</item>
        <item>"IRR"</item>
        <item>"ISK"</item>
        <item>"JEP"</item>
        <item>"JMD"</item>
        <item>"JOD"</item>
        <item>"JPY"</item>
        <item>"KES"</item>
        <item>"KGS"</item>
        <item>"KHR"</item>
        <item>"KMF"</item>
        <item>"KPW"</item>
        <item>"KRW"</item>
        <item>"KWD"</item>
        <item>"KYD"</item>
        <item>"KZT"</item>
        <item>"LAK"</item>
        <item>"LBP"</item>
        <item>"LKR"</item>
        <item>"LRD"</item>
        <item>"LSL"</item>
        <item>"LTL"</item>
        <item>"LVL"</item>
        <item>"LYD"</item>
        <item>"MAD"</item>
        <item>"MDL"</item>
        <item>"MGA"</item>
        <item>"MKD"</item>
        <item>"MMK"</item>
        <item>"MNT"</item>
        <item>"MOP"</item>
        <item>"MRO"</item>
        <item>"MUR"</item>
        <item>"MVR"</item>
        <item>"MWK"</item>
        <item>"MXN"</item>
        <item>"MYR"</item>
        <item>"MZN"</item>
        <item>"NAD"</item>
        <item>"NGN"</item>
        <item>"NIO"</item>
        <item>"NOK"</item>
        <item>"NPR"</item>
        <item>"NZD"</item>
        <item>"OMR"</item>
        <item>"PAB"</item>
        <item>"PEN"</item>
        <item>"PGK"</item>
        <item>"PHP"</item>
        <item>"PKR"</item>
        <item>"PLN"</item>
        <item>"PYG"</item>
        <item>"QAR"</item>
        <item>"RON"</item>
        <item>"RSD"</item>
        <item>"RUB"</item>
        <item>"RWF"</item>
        <item>"SAR"</item>
        <item>"SBD"</item>
        <item>"UAH"</item>

    </string-array>
</resources>