<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_app"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/name_app_background"
        android:gravity="center_horizontal"
        android:paddingTop="40sp"
        android:text="@string/app_name"
        android:textColor="@color/name_app_colorText"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="bottom"
        android:paddingLeft="15sp"
        android:paddingBottom="10sp"
        android:text="@string/name_balances"
        android:textColor="@color/name_balance_background"
        android:textSize="17sp" />

        <TextView
            android:id="@+id/balance"
            android:inputType="numberDecimal"
            android:text="1000.0"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:gravity=""
            android:paddingLeft="18dp"
            android:textSize="22dp">

        </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="bottom"
        android:paddingLeft="15sp"
        android:paddingBottom="10sp"
        android:text="@string/currency_ex"
        android:textColor="@color/name_balance_background"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sell"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingLeft="15sp"
            android:paddingBottom="10sp"
            android:text="@string/title_sell"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/etFrom"
            android:layout_width="90dp"
            android:layout_height="40sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:ellipsize="start"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spSellCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_codes"
            android:padding="15dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receive"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingLeft="15sp"
            android:paddingBottom="10sp"
            android:text="@string/title_receive"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/etTo"
            android:layout_width="90dp"
            android:layout_height="40sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:ellipsize="start"
            android:gravity="center"
            android:textColor="#3deb34"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spReceiveCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_codes"
            android:padding="15dp"></Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/name_btn"
        android:textSize="17dp"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_nums"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/NumberButton"
                android:text="1">

            </TextView>

            <TextView
                android:id="@+id/btn_2"
                style="@style/NumberButton"
                android:text="2"></TextView>

            <TextView
                android:id="@+id/btn_3"
                style="@style/NumberButton"
                android:text="3"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/NumberButton"
                android:text="4"></TextView>

            <TextView
                android:id="@+id/btn_5"
                style="@style/NumberButton"
                android:text="5"></TextView>

            <TextView
                android:id="@+id/btn_6"
                style="@style/NumberButton"
                android:text="6"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/NumberButton"
                android:text="7"></TextView>

            <TextView
                android:id="@+id/btn_8"
                style="@style/NumberButton"
                android:text="8"></TextView>

            <TextView
                android:id="@+id/btn_9"
                style="@style/NumberButton"
                android:text="9"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_0"
                style="@style/NumberButton"
                android:text="0"></TextView>

            <TextView
                android:id="@+id/btn_clear"
                style="@style/NumberButton"
                android:background="@color/background_nums"
                android:text="Clear"></TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>